apps/base/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0.18
        ports:
        - containerPort: 1883
        volumeMounts:
        - name: config-volume
          mountPath: /mosquitto/config
        - name: data-volume
          mountPath: /mosquitto/data
      volumes:
      - name: config-volume
        projected:
          sources:
          - configMap:
              name: mosquitto-config
          - secret:
              name: mosquitto-auth
      - name: data-volume
        persistentVolumeClaim:
          claimName: mosquitto-storage
